ollama-cpu-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "ollama pull yabi/breeze-7b-32k-instruct-v1_0_q8_0"]
          ports:
            - containerPort: 11434
          resources:
            requests:
              cpu: "2"
              memory: "7Gi"
              ephemeral-storage: "8Gi"
              nvidia.com/gpu: 1
            limits:
              ephemeral-storage: "8Gi"
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
  selector:
    app: ollama
